# agentloopgen-2.0

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  config.py  docker-compose.yml  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: __init__.py
infrastructure/: logging.py
src/agentloopgen/: __init__.py  config.py  main.py
src/agentloopgen/api/v1/: __init__.py  agents.py
src/agentloopgen/infrastructure/: database.py  redis.py
src/agentloopgen/models/: agent.py
src/agentloopgen/schemas/: agent.py
src/agentloopgen/services/: agent_service.py
src/agentloopgen/utils/: logger.py
