```toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentloopgen"
version = "2.0.0"
description = "Enterprise-grade AI Workflow Operating System"
readme = "README.md"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=1.4.41,<2.0",
    "asyncpg>=0.29.0",
    "alembic>=1.12.1",
    "pydantic[dotenv]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "redis>=5.0.1",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "kubernetes>=27.2.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "tenacity>=8.2.3",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/yourorg/agentloopgen"
Documentation = "https://agentloopgen.readthedocs.io"
Repository = "https://github.com/yourorg/agentloopgen.git"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agentloopgen*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
```